# rust-server

./: Cargo.toml  user.json  zrqn.redb
.github/workflows/: build.yml
src/: importer.rs  lmdb_setup.rs  lmdb_to_redb.rs  main.rs  old_main.rs
zrqn/: data.mdb  lock.mdb
