[package]
name = "rzn"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
redb = "1.5"
once_cell = "1.19"
bytes = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tikv-jemallocator = "0.6"
